Bug 382369. Distinguish click from click-drag on a <label> so text selection works. r+sr=roc, help from Zack Weinberg